Fixed filter option on mobile view on Race Series single post

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -11225,7 +11225,7 @@ ul.select2-results__options {
 			border-radius: 0;
 			background-color: #fff;
 		}
-		&.select2-results__option.select2-results__option--highlighted,
+		&.select2-results__option--highlighted,
 		&.select2-results__option--selected {
 			color: #000;
 			background-color: transparent!important;
